--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,8 +72,7 @@ services:
       - GEOSERVER_PORT=8080
       - GEOSERVER_HOST_IP=localhost
     volumes:
-#      - /home/ubuntu/ai_images:/ai_django/images
-      - /home/alireza/Desktop/codes/AI_django:/ai_django
+      - /home/ubuntu/ai_images:/ai_django/images
     expose:
       - 8000
     networks:
