--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
       - GEOSERVER_HOST_IP=localhost
     volumes:
       - /home/ubuntu/ai_images:/ai_django/images
+#      - /home/alireza/Desktop/land_monitoring/codes/AI_django:/ai_django
     expose:
       - 8000
     networks:
